<resources>
    <string name="app_name">Agent Pulsa</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="order_code">Kode Order</string>
    <string name="order_detail">Detail Order</string>
    <string name="order_cust_name">Nama Pelanggan</string>
    <string name="order_cust_phone">No. Telp Pelanggan</string>
    <string name="order_cust_location">Alamat Pelanggan</string>
    <string name="order_cust_route">Rute ke Pelanggan</string>
    <string name="accept_order">Terima Order</string>

</resources>
